--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,5 +2,54 @@
     border-radius: 3.25rem !important;
 }
 .bg-pink {
-    background-color: #ee76ad;
+    background-color: #c54849;
+}
+#account .home-slider .slider-item {
+    min-height: 400px !important;
+}
+:root {
+    --primary: "#eb7d50";
+    --default: "#999999";
+    --info: "#1f2333";
+    --success: "#7ca050";
+    --warning: "#f99018";
+    --danger: "#f44336";
+    --accent: "#c64649";
+}
+
+.chat {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.chat li {
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    border-bottom: 1px dotted #b3a9a9;
+}
+
+.chat li .chat-body p {
+    margin: 0;
+    color: #777777;
+}
+
+.panel-body {
+    overflow-y: scroll;
+    height: 350px;
+}
+
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+    background-color: #f5f5f5;
+}
+
+::-webkit-scrollbar-thumb {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #555;
 }
